# AI-Generated-Code-Security-Auditor

./: .dockerignore  .env  .env.example  .gitignore  .pypirc_template  =8.0.0  CHANGELOG.md  CICD_PIPELINE_TEST_RESULTS.md  CLI_USAGE_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURSOR_QUICK_START.md  DEMO_SCENARIOS.md  DIRECTORY_STRUCTURE.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.prod  ERROR_ANALYSIS_REPORT.md  EXTERNAL_FOLDER_SCANNING_GUIDE.md  FEATURES.md  FINAL_REGRESSION_TEST_REPORT.md  FIXES_APPLIED_REPORT.md  FIXES_SUMMARY.md  GH_ACTIONS_VALIDATION_REPORT.md  GITHUB_ACTIONS_SIMULATION_RESULT.md  GITIGNORE_GUIDE.md  HACKATHON.md  HACKATHON_COMMANDS.md  HACKATHON_README.md  INSTALL.md  LOCAL_SETUP_GUIDE.md  OPENROUTER_NOTE.md  PHASE_7C_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_backup.md  REPOSITORY_CHECKLIST.md  RUN_INSTRUCTIONS.md  SECURITY.md  (+71 more)
.cursor/: launch.json  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
app/: celery_app.py  config.py  main.py  websocket_manager.py
auditor/: __init__.py  cli.py
chroma_db/: chroma.sqlite3
cli_visuals/: __init__.py  charts.py  formatters.py  heatmap.py  terminal.py
docker/: docker-compose.dev.yml  docker-compose.test.yml  entrypoint.sh  seed_db.py
docs/: 00-DOCUMENTATION_INDEX.md  01-PROJECT_OVERVIEW.md  02-LOCAL_SETUP_GUIDE.md  03-LOCAL_TESTING_GUIDE.md  04-README.md  16-gh_actions_test_plan.md  AI_Code_Security_Auditor_Complete_Local_Setup_Guide.docx  CLI_Commands.md  COMPLETE_USER_GUIDE.md  COMPLETION_SUMMARY.md  DEPLOYMENT_GUIDE.md  HACKATHON_SETUP.md  INDEX.md  (+10 more)
(+72 files in other folders)
